testing renderProduct function ⌨️

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #fff1e6;
+    background-color: white;
     color: pink;
     opacity: 0.8;
     width: 100%;
