--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,8 @@ body, html {
     height: 100%;
     padding: 0;
     margin: 0;
-  }
-  
+
+}
   * {
     box-sizing: border-box;
   }
@@ -91,6 +91,32 @@ body, html {
     
   
   }
+
+  .cart-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: center;
+    align-items: center;
+    height: 100%;
+    padding: 100px;
+   
+    
+  
+  }
+
+  table {
+    padding: 20px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  th {
+    padding: 20px;
+    margin: 20px;
+  }
+
 
   .product-section {
     width: 50%;
@@ -183,4 +209,11 @@ p {
   img {
       width: 200px;
       height: 300px;
+  }
+
+  #shopping-container {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
   }
