adding image section to td and style changes 🦄

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body, html {
   }
   
   p {
-    color: #ddbea9;
+    color: #242423;
     font-family: 'Belleza', sans-serif;
     font-weight: 200;
     padding: 10px;
@@ -95,47 +95,70 @@ body, html {
   .cart-container{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     text-align: center;
     align-items: center;
-    height: 100%;
-    padding: 100px;
-    width: 100%;
+    padding: 80px;
+    background-color: white;
+
+    
+    
    
     
   
   }
 
   table {
-    padding: 20px;
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #e5989b;
-    padding: 10px 20px;
-    margin: 0 5px;
+    color: #242423;
     text-decoration: none;
     font-family: 'Belleza', sans-serif;
     font-size: 1em;
-    line-height: 2;
-    letter-spacing: 5px;;
-    width: 100%;
+    border: 2px #fec89a solid;
+    width: 60%;
+    padding: 10px;
+    border-collapse: collapse;
+    background-color: white;
+  
+   
+
   
   }
 
   th {
-    padding: 20px;
-    margin: 20px;
+    padding: 10px;
+    border-bottom: 2px solid #fec89a;
+    font-size: 1em;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
+    
   }
+
 
   td {
-    padding: 20px;
-    margin: 20px;
+    padding: 15px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
+    
+    
+    
+    
+    
   }
 
-
+  td img {
+    width: 200px;
+    height: 200px;
+    
+  }
+  
+tr {
+  padding: 10px;
+  border-top: 2px solid #fec89a;
+  
+}
 
   .product-section {
     width: 50%;
@@ -161,17 +184,27 @@ h3 {
   }
 
 h4 {
-  color: pink;
+  color: #e5989b;
   font-size: 1.5em;
   width: 90%;
   font-family: 'Belleza', sans-serif;
   font-weight:400;
 }
+
+h5 {
+  
+    color: #e5989b;
+    font-size: 2.5em;
+    width: 90%;
+    font-family: 'Belleza', sans-serif;
+    font-weight:400;
+  
+}
   
 p {
-    color: #ddbea9;
-    font-size: 1.5em;
-    margin-top: 25px;
+    color: #242423;
+    font-size: 1em;
+    margin-top: 10px;
     padding-left: 0px;
     font-family: 'Belleza', sans-serif;
     font-weight: 300;
@@ -207,6 +240,8 @@ p {
     
     
   }
+
+
   
   ul {
     display: flex;
