--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,8 @@ body, html {
     color: #242423;
     font-family: 'Belleza', sans-serif;
     font-weight: 200;
-    padding: 10px;
+    padding-right: 20px;
+    padding-top: 20px;
   }
   
   /* Nav Bar */
@@ -22,7 +23,7 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: white;
+    background-color:  #fdfffc;
     color: pink;
     opacity: 0.8;
     width: 100%;
@@ -52,15 +53,15 @@ body, html {
     font-size: 2em;
     font-family: 'Belleza', sans-serif;
     font-style: italic;
-    color:white;
+    
   }
   
   
-  /* Header */
+  /* Home page Header */
   
   
   .top-container{
-    background-color: white;
+    background-color: #f8edeb;
     background-image: url("../assets/main-pic.png");                       
     background-repeat:no-repeat;
     background-position: bottom right;
@@ -74,38 +75,67 @@ body, html {
   
   }
 
+  /* Products page Header */
 
   .products-container{
-    background-color: white;
-    background-image: url("../assets/product-container.png");
-    background-size: center;                      
+    background-color: #f8edeb;
+    background-image: url("../assets/6.png");
+    background-size: 450px;;                      
     background-repeat:no-repeat;
     background-position: center center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: left;
-    height: 100%;
-    padding: 200px;
-   
-    
-  
-  }
+    height: 20%;
+    padding: 220px;
+}
 
-  .cart-container{
+/* Cart page styling */
+
+.cart-container{
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
     padding: 80px;
-    background-color: white;
+    background-color: #f8edeb;
+}
 
-    
-    
-   
-    
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  padding: 50px;
   
-  }
+}
+
+li {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  
+
+}
+
+#list li {
+  border: 2px solid #e5989b;
+  box-shadow: rgba(254, 200, 154, 0.4) 5px 5px, rgba(254, 200, 154, 0.3) 10px 10px, rgba(254, 200, 154, 0.2) 15px 15px, rgba(254, 200, 154, 0.1) 20px 20px, rgba(254, 200, 154, 0.05) 25px 25px;
+  background-color: #fdfffc;
+  
+}
+
+
+#shopping-container {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+}
 
   table {
     color: #242423;
@@ -113,17 +143,15 @@ body, html {
     font-family: 'Belleza', sans-serif;
     font-size: 1em;
     border: 2px #fec89a solid;
-    width: 60%;
+    box-shadow: rgba(254, 200, 154, 0.4) 5px 5px, rgba(254, 200, 154, 0.3) 10px 10px, rgba(254, 200, 154, 0.2) 15px 15px, rgba(254, 200, 154, 0.1) 20px 20px, rgba(254, 200, 154, 0.05) 25px 25px;
+    width: 50%;
+    width: auto;
     padding: 10px;
     border-collapse: collapse;
-    background-color: white;
-  
-   
+    background-color: #fdfffc;
+}
 
-  
-  }
-
-  th {
+th {
     padding: 10px;
     border-bottom: 2px solid #fec89a;
     font-size: 1em;
@@ -135,38 +163,33 @@ body, html {
   }
 
 
-  td {
+td {
     padding: 15px;
     text-align: center;
     justify-content: center;
     align-items: center;
-    
-    
-    
-    
-    
-    
-  }
+}
 
-  td img {
+td img {
     width: 200px;
     height: 200px;
     
-  }
+}
+
+img {
+  width: 200px;
+  height: 200px;
+}
   
 tr {
   padding: 10px;
   border-top: 2px solid #fec89a;
   
 }
-
-  .product-section {
-    width: 50%;
-    height: 50%;
-  }
+/* Global Styles */
   
 h1 {
-    color: #e5989b;
+    color: #ee6c4d;
     font-size: 1em;
     width: 50%;
     font-family: 'Belleza', sans-serif;
@@ -176,7 +199,7 @@ h1 {
   }
 
 h3 {
-    color: #e5989b;
+    color: #ee6c4d;
     font-size: 3em;
     width: 50%;
     font-family: 'Belleza', sans-serif;
@@ -200,19 +223,21 @@ h5 {
     font-weight:400;
   
 }
+
+h6 {
+  color: #fec89a;
+  font-size: 3em;
+  width: 50%;
+  font-family: 'Belleza', sans-serif;
+  font-weight:400;
+  font-style: bold;
+}
   
-p {
-    color: #242423;
-    font-size: 1em;
-    margin-top: 10px;
-    padding-left: 0px;
-    font-family: 'Belleza', sans-serif;
-    font-weight: 300;
-  }
+
 
   
 .top-btn {
-    background: transparent;
+    background: #fdfffc;
     color: #fec89a;
     border: 2px #fec89a solid;
     font-size:1em;
@@ -225,49 +250,18 @@ p {
     
   }
 
-  button {
+button {
   
-      background: transparent;
-      color: #fec89a;
-      border: 2px #fec89a solid;
-      font-size:1em;
-      padding: 10px;
-      margin-top: 20px;
-      text-decoration: none;
-      font-family: 'Belleza', sans-serif;
-      font-weight: 200;
-      
-    
-    
-  }
+  background: #fdfffc;
+  color: #fec89a;
+  border: 2px #fec89a solid;
+  font-size:1em;
+  padding: 10px;
+  margin-top: 20px;
+  text-decoration: none;
+  font-family: 'Belleza', sans-serif;
+  font-weight: 200;
+}
 
-
+ 
   
-  ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-  }
-
-  li {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-
-  }
-
-  img {
-      width: 200px;
-      height: 300px;
-  }
-
-  #shopping-container {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    display: flex;
-  }
