create getCart, setCart, clearCart, and addToCart functions in cart-utils.js

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body, html {
   }
   
   .navbar a {
-    color: #fec89a;
+    color: #e5989b;
     padding: 10px 20px;
     margin: 0 5px;
     text-decoration: none;
