--- a/styles/style.css
+++ b/styles/style.css
@@ -278,5 +278,7 @@ button:hover {
   box-shadow: rgba(254, 200, 154, 0.4) 5px 5px, rgba(254, 200, 154, 0.3) 10px 10px, rgba(254, 200, 154, 0.2) 15px 15px, rgba(254, 200, 154, 0.1) 20px 20px, rgba(254, 200, 154, 0.05) 25px 25px;
 }
 
- 
+ #place-order {
+    visibility: hidden;
+ }
   
